Bug 168221 - DOCX: Header and footer is missing after opening the file and also converting to the PDF
Summary: DOCX: Header and footer is missing after opening the file and also converting...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1 all versions
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:26.2.0 target:25.8.2 target:25...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Writer-Header-Footer
  Show dependency treegraph
 
Reported: 2025-09-01 07:18 UTC by SATYA SRINIVAS K
Modified: 2025-09-11 11:53 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Original file.docx (142.05 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-09-01 07:19 UTC, SATYA SRINIVAS K
Details
Header_Footer_MSO.png (103.91 KB, image/png)
2025-09-01 07:19 UTC, SATYA SRINIVAS K
Details
Header_Footer_Missing_LibreOffice.png (94.74 KB, image/png)
2025-09-01 07:19 UTC, SATYA SRINIVAS K
Details

Note You need to log in before you can comment on or make changes to this bug.
Description SATYA SRINIVAS K 2025-09-01 07:18:54 UTC
Description:
The header and footer is missing. MS office is showing them.

Steps to Reproduce:
1. Open the attached Original file.docx in Libre office.
2. Observe the header and footer.
3. Check the attached screenshots from MS office and Libre office for comparision.

Actual Results:
Header and footer are missing/not visible.

Expected Results:
Header and footer should be visible.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.8.0.4 (X86_64)
Build ID: 48f00303701489684e67c38c28aff00cd5929e67
CPU threads: 22; OS: Windows 11 X86_64 (build 22631); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 1 SATYA SRINIVAS K 2025-09-01 07:19:11 UTC
Created attachment 202627 [details]
Original file.docx
Comment 2 SATYA SRINIVAS K 2025-09-01 07:19:27 UTC
Created attachment 202628 [details]
Header_Footer_MSO.png
Comment 3 SATYA SRINIVAS K 2025-09-01 07:19:39 UTC
Created attachment 202629 [details]
Header_Footer_Missing_LibreOffice.png
Comment 4 Xisco Faulí 2025-09-01 09:02:43 UTC
Regression introduced by:

commit 32c322e9d037b29ded2297b400a2c596c042f1fa	[log]
author	Miklos Vajna <vmiklos@collabora.com>	Mon Oct 26 17:52:42 2020 +0100
committer	Miklos Vajna <vmiklos@collabora.com>	Mon Oct 26 20:30:50 2020 +0100
tree d2550fd9eee6781bac5dc0550d5af33007bbd0ad
parent 5711858e00f542f1770d7ff3c035e8a2fdb72266 [diff]

DOCX import, altChunk: fix missing page break

Bisected with: linux-64-7.1
Comment 5 Miklos Vajna 2025-09-01 12:52:34 UTC
Ah hm, I don't recall how this was supposed to work 5 years ago, I'll try to read back commits in that area. Thanks for the bisect, in any case.
Comment 6 Commit Notification 2025-09-05 20:54:45 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4607c8d67ec3583c5a3e017bf1fa6fc7514a1674

tdf#168221 DOCX import, altChunk: fix lost header/footer

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-09-08 11:14:22 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/dccbc10c314b6d81b0f1480fdbe68d5668bb2f69

tdf#168221 DOCX import, altChunk: fix lost header/footer

It will be available in 25.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-09-11 11:53:09 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/ce0cbca4eb0d6165de4735fa1701ba425bb384f5

tdf#168221 DOCX import, altChunk: fix lost header/footer

It will be available in 25.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.