tdf#168221 DOCX import, altChunk: fix lost header/footer

Open the bugdoc, first page should have a header, but it has no header.

This went wrong in 32c322e9d037b29ded2297b400a2c596c042f1fa (DOCX
import, altChunk: fix missing page break, 2020-10-26), the problem is
that somewhat similar to copy&paste, the altChunk mechanism drops styles
from the inner document: the section breaks in the middle of the
document are wanted, but the final section break is not wanted.

So fix the problem by restricting when
SectionPropertyMap::CloseSectionGroup() sets the page style name:
instead of always doing that for alt chunks, only do it for non-last
section breaks.

This keeps the old page break case working and fixes the new, lost
header problem.

Change-Id: I5fc2a3d0561795612d39e50d780c7f78757486e2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190625
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>